--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/html-head') %>
-<link rel="stylesheet" href="/stylesheets/flightss/index.css" />
+<link rel="stylesheet" href="/stylesheets/flights/index.css" />
 <%- include('../partials/nav') %>
 
 <main>
@@ -14,16 +14,13 @@
       </tr>
     </thead>
     <tbody>
-      <% flights.forEach(movie => { %>
+      <% flights.forEach(flight => { %>
         <tr>
-          <td><%= movie.title %></td>
-          <td><%= movie.releaseYear %></td>
-          <td><%= movie.mpaaRating %></td>
-          <td><%= movie.cast.join(', ') %></td>
-          <%# finish the ternary expression to display 'Yes' or 'Nope' %> 
-          <td><%= movie.nowShowing ? 'Yes' : 'Nope' %></td>
+          <td><%= flight.airline %></td>
+          <td><%= flight.airport %></td>
+          <td><%= flight.flightNo %></td>
+          <td><%= flight.departs.join(', ') %></td>
         </tr>
-      <%# Close the forEach using EJS here %>
       <% }) %>
     </tbody>
   </table>
