--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -19,7 +19,7 @@
           <td><%= flight.airline %></td>
           <td><%= flight.airport %></td>
           <td><%= flight.flightNo %></td>
-          <td><%= flight.departs.join(', ') %></td>
+          <td><%= flight.departs %></td>
         </tr>
       <% }) %>
     </tbody>
