fix nav.ejs title

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
     <a 
       href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>
     >
-      ADD Flight
+      ALL Flight
     </a>
     <a 
       href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>
