--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -6,9 +6,20 @@
   <h1><%= title %></h1>
   <form id="new-form" action="/flights" method="POST">
     <label for="title-input">Airline:</label>
-    <input type="text" name="airline" id="airline">
+    <select name="airline" id="airline-select">
+      <option value="United Airlines">United Airlines</option>
+      <option value="Delta">Delta</option>
+      <option value="American Airlines">American Airlines</option>
+      <option value="Southwest Airlines">Southwest Airlines</option>
+      <option value="Spirit">Spirit</option>
+    </select>
     <label for="airport">Airport</label>
-    <input type="text" name="airport" id="airport">
+    <select name="airport" id="airport-select">
+      <option value="JFK">JFK</option>
+      <option value="LGA">LGA</option>
+      <option value="MIA">MIA</option>
+      <option value="LAX">LAX</option>
+    </select>
     <label for="flightNo">FlightNo:</label>
     <input type="text" name="flightNo" id="flightNo">
     <label for="departs">Departs:</label>
