--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -24,7 +24,8 @@
     <label for="flightNo">FlightNo:</label>
     <input type="text" name="flightNo" id="flightNo">
     <label for="departs">Departs:</label>
-    <input type="text" name="departs" id="departs">
+    <input type="text" name="departs" id="departs-text">
+    <input type="checkbox" name="departs" id="departs-checkbox" checked>
     <button type="submit">Add Flight</button>
   </form>
 </main>
