--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/html-head') %>
-<link rel="stylesheet" href="/stylesheets/movies/show.css" />
+<link rel="stylesheet" href="/stylesheets/flights/show.css" />
 <%- include('../partials/nav') %>
 
 <main>
@@ -13,7 +13,7 @@
     </div>
     <div>Airport: <%= flight.airport %> </div>
     <div>FlightNo: <%= flight.flightNo %></div></div>
-    <div>Departs: <%= flight.departs ? 'Yes' : 'Nope' %></div>
+    <div>Departs: <%= flight.departs %></div>
   </section>
 </main>
   
