--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,7 +17,7 @@ body {
   background-color: gray;
   /* Use a system font, if none are available use an available sans-sarif font */
   margin: 0;
-  color: #424748;
+  color: #33658A;
   min-height: 100vh;
   display: grid;
   grid-template-rows: 50px 1fr;
@@ -32,7 +32,7 @@ body > main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #e8eceb;
+  background-color: #FFCB47;
   padding: 20px;
 }
 
@@ -42,7 +42,7 @@ body > main h1:first-child {
 
 body > nav {
   grid-area: nav;
-  background-color: #b8c0c2;
+  background-color: #28C2FF;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -60,16 +60,16 @@ nav > a {
   text-decoration: none;
   padding: 10px;
   border-radius: 5px;
-  color: #424748;
+  color: #33658A;
 }
 
 nav > a:visited {
-  color: #424748;
+  color: #33658A;
 }
 
 nav > a:hover {
   color: white;
-  background-color: #424748;
+  background-color: #FFCB47;
 }
 
 nav > a.active {
@@ -78,4 +78,12 @@ nav > a.active {
 
 .fas::before {
   font-family: "Font Awesome 5 Free";
+}
+
+a {
+  color: #28C2FF;
+}
+
+a:hover {
+  color:red
 }
