implement edit ctrl function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <main>
   <h1><%= title %></h1>
+  <img src="https://www.gannett-cdn.com/presto/2019/06/23/USAT/c3a9f051-bd6c-4b39-b5b9-38244deec783-GettyImages-932651818.jpg?width=660&height=517&fit=crop&format=pjpg&auto=webp" alt="plane taking off">
 </main>
 
 <%- include("./partials/footer") %>
