--- a/views/flights/edit.ejs
+++ b/views/flights/edit.ejs
@@ -4,9 +4,12 @@
 
 <main>
   <h1><%= title %></h1>
-  <form id="new-form" action="/flights" method="POST">
+  <form id="new-form" 
+    action="/flights/<%= flight._id %>?_method=PUT" 
+    method="POST">
     <label for="title-input">Airline:</label>
     <select name="airline" id="airline-select">
+      <option value="<%= flight.airline%>"><%= flight.airline%></option>
       <option value="United">United</option>
       <option value="Delta">Delta</option>
       <option value="American">American</option>
@@ -15,17 +18,18 @@
     </select>
     <label for="airport">Airport</label>
     <select name="airport" id="airport-select">
+      <option value="<%= flight.airport%>"><%= flight.airport%></option>
       <option value="AUS">AUS</option>
-      <option value="DEN" selected>DEN</option>
+      <option value="DEN">DEN</option>
       <option value="SAN">SAN</option>
       <option value="LAX">LAX</option>
       <option value="DFW">DFW</option>
     </select>
     <label for="flightNo">FlightNo:</label>
-    <input type="text" name="flightNo" id="flightNo">
-    <label for="departs">Departs:</label>
-    <input type="datetime-local" name="departs" id="departs-text">
-    <button type="submit">Add Flight</button>
+    <input type="text" name="flightNo" id="flightNo" value="<%= flight.flightNo%>">
+    <label for="departs">Departs: <%= flight.departs %></label>
+    <input type="datetime-local" name="departs" id="departs-text" value="<%= flight.departs%>">
+    <button type="submit">Save Flight</button>
   </form>
 </main>
 
