implement createTicket route and edit show.ejs for tickets/price

--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -15,6 +15,23 @@
     <div>FlightNo: <%= flight.flightNo %></div></div>
     <div>Departs: <%= flight.departs %></div>
   </section>
+  <h2>Tickets</h2>
+  <form
+    id="add-ticket-form"
+    action="/flights/<%= flight._id %>/tickets"
+    method="POST"
+  >
+    <label for="ticket-textarea">Ticket:</label>
+    <input name="seat" required pattern="[A-F][1-9]\d?">
+    <label for="price">Price</label>
+    <select name="price" id="price-select">
+      <option value="150" selected>$150</option>
+      <option value="300">$300</option>
+      <option value="500">$500</option>
+      <option value="1000">$1000</option>
+    </select>
+    <button type="submit">Add Ticket</button>
+  </form>
 </main>
   
 <%- include('../partials/footer') %>
