--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,11 +5,11 @@
     <a 
       href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>
     >
-      ALL Flight
+      All Flights
     </a>
     <a 
       href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>
     >
-      ADD Flight
+      Add Flight
     </a>
   </nav>
