--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,6 +3,12 @@
   <nav>
 		<i class="fas fa-film fa-2x"></i>  
     <a 
+    href="/meals/new"
+    <%- title === 'Add Meal' ? 'class="active"' : '' %>
+  >
+    Add Meal
+  </a>
+    <a 
       href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>
     >
       All Flights
