--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -14,8 +14,21 @@
     <div>Airport: <%= flight.airport %> </div>
     <div>FlightNo: <%= flight.flightNo %></div></div>
     <div>Departs: <%= flight.departs %></div>
-
+    <div>Meals:</div>
+    <ul>
+      <% flight.meals.forEach(meal => { %>
+        <li><% meal.name %> </li>
+      <% }) %> 
+    </ul>
   </section>
+  <form id="add-per-to-meal" action="/flights/<%= flight._id %>/meals" method="POST">
+    <select name="mealId">
+      <% meals.forEach(meal => { %>
+        <option value="<%= meal._id %>"><%= meal.name %></option>
+      <% }) %>
+    </select>
+    <button type="submit">Add to Meal</button>
+  </form>
   <h2>Tickets</h2>
   <form
     id="add-ticket-form"
