--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -16,12 +16,12 @@
     <div>Departs: <%= flight.departs %></div>
     <div>Meals:</div>
     <ul>
-      <% flight.meals.forEach(meal => { %>
-        <li><% meal.name %> </li>
+      <% flight.meals.forEach(addMeal => { %>
+        <li><%= addMeal.name %> </li>
       <% }) %> 
     </ul>
   </section>
-  <form id="add-per-to-meal" action="/flights/<%= flight._id %>/meals" method="POST">
+  <form id="add-to-meal" action="/flights/<%= flight._id %>/meals" method="POST">
     <select name="mealId">
       <% meals.forEach(meal => { %>
         <option value="<%= meal._id %>"><%= meal.name %></option>
